--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@neondatabase/serverless": "^1.0.2",
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.44.7",
+    "react-markdown": "^8.0.5",
+    "remark-gfm": "^3.0.1",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
