Fix react markdown issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
+  "types": ["react"],
     "incremental": true,
     "plugins": [
       {
